change the real content

--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
                     <div class="mobile-nav-item-wrap">
                         <ul>
                             <li class="nav-item">
-                                <a class="nav-link" href="Tauseef.html">Home</a>
+                                <a class="nav-link" href=".html">Home</a>
                             </li>
                             <li>
                                 <a  href="portfolio.html">portfolio</a>
@@ -112,7 +112,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav custom-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="Tauseef.html">Home</a>
+                                <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link"  href="portfolio.html">Portfolio</a>
