added meta tag for verification on play console

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 
     <html lang="en">
-
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="google-site-verification" content="pvjMoJ1MizWhI5IwMjO8rVeYgZQMptXh-GotLx2chZw" />
 
         <meta name="description" content="Hi, I&#39;m Sajon. UI/UX Designer, Specialized in Product Design">
         <meta name="developer" content="Musharrof Shishir">
