--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <meta name="description" content="Hi, I&#39;m Sajon. UI/UX Designer, Specialized in Product Design">
+    <meta name="description" content="Hi, I&#39;m Tauseef. Android developer, Specialized in Product Design">
     <meta name="developer" content="Musharrof Shishir">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -141,7 +141,7 @@
                     <div class="about-text">
                         <h3 class="">ABOUT ME</h3>
                         <p>I am an experienced Android developer along with Flutter geek interested in the newest technologies and trends.</p>
-                        <p>I have obtained a master’s degree from the Government College University Faisalabad in Computer science.
+                        <p>I have obtained a master's degree from the Government College University Faisalabad in Computer science.
                             During my studies, I have been acquiring work experience in various fields and lately I have been concentrating on software development
                             on the Android & Hybrid Platform.</p>
                             <p>I have in total over three years of active Android development experience. I have worked on numerous projects used by hundreds
@@ -176,11 +176,11 @@
                 <div class="imagebox">
               <div class="row">
                   <div class="col-lg-6 col-md-12 col-sm-12">
-                    <img   src="./Tauseef.Co_files/tauseef_s.jpeg" alt="">
+                    <img class="logoimg"  src="./Tauseef.Co_files/plagiarism.webp" alt="">
                   </div>
                   <div class="col-lg-6 col-md-12 col-sm-12 mt-3">
-              <h2>Plagiarism Checker</h2>
-              <a href="https://play.google.com/store/apps">Get It on Play Store</a>
+              <h4>Plagiarism Checker</h4>
+              <a href="https://play.google.com/store/apps/dev?id=6353011113157197352">Get It on Play Store</a>
                   </div>
               </div></div>
              </div>
@@ -189,11 +189,12 @@
                 <div class="imagebox">
               <div class="row">
                   <div class="col-lg-6 col-md-12 col-sm-12">
-                    <img   src="./Tauseef.Co_files/tauseef_s.jpeg" alt="">
+                    <img class="logoimg"   src="./Tauseef.Co_files/calculator.webp" alt="">
                   </div>
                   <div class="col-lg-6 col-md-12 col-sm-12 mt-3">
-              <h2>Plagiarism Checker</h2>
-              <a href="https://play.google.com/store/apps">Get It on Play Store</a>
+              <h4>	
+                Limit Calculator</h4>
+              <a href="https://play.google.com/store/apps/details?id=com.enzipe.limitcalculator">Get It on Play Store</a>
                   </div>
               </div></div>
              </div>
@@ -202,11 +203,12 @@
                 <div class="imagebox">
               <div class="row">
                   <div class="col-lg-6 col-md-12 col-sm-12">
-                    <img   src="./Tauseef.Co_files/tauseef_s.jpeg" alt="">
+                    <img class="logoimg"  src="./Tauseef.Co_files/Paraphrasing Tool.webp" alt="">
                   </div>
                   <div class="col-lg-6 col-md-12 col-sm-12 mt-3">
-              <h2>Plagiarism Checker</h2>
-              <a href="https://play.google.com/store/apps">Get It on Play Store</a>
+              <h4>	
+                Paraphrasing Tool</h4>
+              <a href="https://play.google.com/store/apps/details?id=com.paraphraser.articlerewriter">Get It on Play Store</a>
                   </div>
               </div></div>
              </div>
@@ -221,11 +223,12 @@
                 <div class="imagebox">
               <div class="row">
                   <div class="col-lg-5 col-md-12 col-sm-12">
-                    <img   src="./Tauseef.Co_files/tauseef_s.jpeg" alt="">
+                    <img   src="./Tauseef.Co_files/text.webp" alt="">
                   </div>
                   <div class="col-lg-7 col-md-12 col-sm-12 mt-3">
-              <h2>Plagiarism Checker</h2>
-              <a href="https://play.google.com/store/apps">Get It on Play Store</a>
+              <h4>	
+                Text Summarizer - AI</h4>
+              <a href="https://play.google.com/store/apps/details?id=com.summarizingtool.textsummarizer">Get It on Play Store</a>
                   </div>
               </div></div>
              </div>
@@ -235,11 +238,11 @@
                 <div class="imagebox">
               <div class="row">
                   <div class="col-lg-6 col-md-12 col-sm-12">
-                    <img   src="./Tauseef.Co_files/tauseef_s.jpeg" alt="">
+                    <img   src="./Tauseef.Co_files/million.webp" alt="">
                   </div>
                   <div class="col-lg-6 col-md-12 col-sm-12 mt-3">
-              <h2>Plagiarism Checker</h2>
-              <a href="https://play.google.com/store/apps">Get It on Play Store</a>
+              <h4>Million Billion Calculatorr</h4>
+              <a href="https://play.google.com/store/apps/details?id=com.millionbillioncalculator.conversion">Get It on Play Store</a>
                   </div>
               </div></div>
              </div>
@@ -248,11 +251,12 @@
                 <div class="imagebox">
               <div class="row">
                   <div class="col-lg-6 col-md-12 col-sm-12">
-                    <img   src="./Tauseef.Co_files/tauseef_s.jpeg" alt="">
+                    <img   src="./Tauseef.Co_files/age.webp" alt="">
                   </div>
                   <div class="col-lg-6 col-md-12 col-sm-12 mt-3">
-              <h2>Plagiarism Checker</h2>
-              <a href="https://play.google.com/store/apps">Get It on Play Store</a>
+              <h4>	
+                Age Calculator</h4>
+              <a href="https://play.google.com/store/apps/details?id=com.enzipe.agecalculator">Get It on Play Store</a>
                   </div>
               </div></div>
              </div>
@@ -267,11 +271,12 @@
                 <div class="imagebox">
               <div class="row">
                   <div class="col-lg-6 col-md-12 col-sm-12">
-                    <img   src="./Tauseef.Co_files/tauseef_s.jpeg" alt="">
+                    <img   src="./Tauseef.Co_files/integral.webp" alt="">
                   </div>
                   <div class="col-lg-6 col-md-12 col-sm-12 mt-3">
-              <h2>Plagiarism Checker</h2>
-              <a href="https://play.google.com/store/apps">Get It on Play Store</a>
+              <h4>
+                Integral calculator with steps</h4>
+              <a href="https://play.google.com/store/apps/details?id=com.mathtools.integralcalculator">Get It on Play Store</a>
                   </div>
               </div></div>
              </div>
@@ -280,11 +285,12 @@
                 <div class="imagebox">
               <div class="row">
                   <div class="col-lg-6 col-md-12 col-sm-12">
-                    <img   src="./Tauseef.Co_files/tauseef_s.jpeg" alt="">
+                    <img   src="./Tauseef.Co_files/LCM.webp" alt="">
                   </div>
                   <div class="col-lg-6 col-md-12 col-sm-12 mt-3">
-              <h2>Plagiarism Checker</h2>
-              <a href="https://play.google.com/store/apps">Get It on Play Store</a>
+              <h4>	
+                LCM and GCF Calculator</h4>
+              <a href="https://play.google.com/store/apps/details?id=com.enzipe.lcmcalculator">Get It on Play Store</a>
                   </div>
               </div></div>
              </div>
@@ -293,11 +299,11 @@
                 <div class="imagebox">
               <div class="row">
                   <div class="col-lg-6 col-md-12 col-sm-12">
-                    <img   src="./Tauseef.Co_files/tauseef_s.jpeg" alt="">
+                    <img   src="./Tauseef.Co_files/sig fig.webp" alt="">
                   </div>
                   <div class="col-lg-6 col-md-12 col-sm-12 mt-3">
-              <h2>Plagiarism Checker</h2>
-              <a href="https://play.google.com/store/apps">Get It on Play Store</a>
+              <h4>Sig fig calculator</h4>
+              <a href="https://play.google.com/store/apps/details?id=com.enzipe.sigfigcalculator">Get It on Play Store</a>
                   </div>
               </div></div>
              </div>
@@ -312,11 +318,12 @@
                 <div class="imagebox">
               <div class="row">
                   <div class="col-lg-6 col-md-12 col-sm-12">
-                    <img   src="./Tauseef.Co_files/tauseef_s.jpeg" alt="">
+                    <img   src="./Tauseef.Co_files/gcf.webp" alt="">
                   </div>
                   <div class="col-lg-6 col-md-12 col-sm-12 mt-3">
-              <h2>Plagiarism Checker</h2>
-              <a href="https://play.google.com/store/apps">Get It on Play Store</a>
+              <h4>	
+                GCF & LCM Calculator</h4>
+              <a href="https://play.google.com/store/apps/details?id=com.mathtools.gcfcalculator">Get It on Play Store</a>
                   </div>
               </div></div>
              </div>
@@ -325,11 +332,11 @@
                 <div class="imagebox">
               <div class="row">
                   <div class="col-lg-6 col-md-12 col-sm-12">
-                    <img   src="./Tauseef.Co_files/tauseef_s.jpeg" alt="">
+                    <img   src="./Tauseef.Co_files/Critical.webp" alt="">
                   </div>
                   <div class="col-lg-6 col-md-12 col-sm-12 mt-3">
-              <h2>Plagiarism Checker</h2>
-              <a href="https://play.google.com/store/apps">Get It on Play Store</a>
+              <h4>Critical Value Calculator</h4>
+              <a href="https://play.google.com/store/apps/details?id=com.mathtools.criticalvaluecalculator">Get It on Play Store</a>
                   </div>
               </div></div>
              </div>
@@ -338,11 +345,11 @@
                 <div class="imagebox">
               <div class="row">
                   <div class="col-lg-6 col-md-12 col-sm-12">
-                    <img   src="./Tauseef.Co_files/tauseef_s.jpeg" alt="">
+                    <img   src="./Tauseef.Co_files/articel.webp" alt="">
                   </div>
                   <div class="col-lg-6 col-md-12 col-sm-12 mt-3">
-              <h2>Plagiarism Checker</h2>
-              <a href="https://play.google.com/store/apps">Get It on Play Store</a>
+              <h4>Article Rewriter and Spinner</h4>
+              <a href="https://play.google.com/store/apps/details?id=com.spinner.articlerewriter">Get It on Play Store</a>
                   </div>
               </div></div>
              </div>
